Add project configuration and setup